[package]
name = "moonscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
okapi = "0.7.0"
rocket = { version = "=0.5.0", default-features = false, features = [ "json" ] }
rocket_okapi = { version = "0.8.0",  features = [ "swagger" ] }
serde = "1.0"
