[package]
name = "moonscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
okapi = "0.7.0"
rocket = { version = "=0.5.0", default-features = false, features = [ "json" ] }
rocket_okapi = { version = "0.8.0",  features = [ "swagger" ] }
serde = "1.0"
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
serde_yaml = "0.9.19"
anyhow = "1.0.44"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4"
tera = "1"
time = { version = "0.3.34", features = ["serde", "macros"] }
